[package]
name = "rgm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui = "0.32.1"
egui_plot = "0.33.0"
nvml-wrapper = "0.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.15"

crossbeam-channel = "0.5"
