[package]
name = "rgm-ui"
version = "0.1.0"
edition = "2021"
description = "A Rust GPU Monitor with egui UI for NVIDIA GPUs on Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Xlqmu/RGM"
readme = "README.md"
keywords = ["nvidia", "gpu", "monitor", "linux", "egui"]
categories = ["gui", "hardware-support", "visualization"]

[[bin]]
name = "rgm"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.32.2", features = ["persistence"] }
egui = "0.32.2"
egui_plot = "0.33.0"
nvml-wrapper = "0.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
crossbeam-channel = "0.5"
